--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,7 +22,7 @@ services:
       - django
       - redis
     env_file:
-      - ./config/env/prod/.django
+      - .env
     volumes:
       - .:/code/
     <<: *common
@@ -36,7 +36,7 @@ services:
       - django
       - redis
     env_file:
-      - ./config/env/prod/.django
+      - .env
     volumes:
       - .:/code/
     <<: *common
@@ -56,7 +56,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - ./config/env/prod/.django
+      - .env
     volumes:
       - ./:/code
       - game_1630_static_volume:/code/static
@@ -74,7 +74,7 @@ services:
     depends_on:
       - celery
     env_file:
-      - ./config/env/prod/.django
+      - .env
     volumes:
       - .:/code/
     <<: *common
