--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -63,8 +63,19 @@ services:
       - game_1630_media_volume:/code/media
     depends_on:
       - redis
+      - postgres
     <<: *common
 
+  postgres:
+    image: postgres:13.3-alpine
+    container_name: game_1630-pc01
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    volumes:
+      - game_1630_postgres_data:/var/lib/postgresql/data/
+    <<: *common
 
   nginx:
     build:
@@ -102,3 +113,4 @@ volumes:
   game_1630_redis_data:
   game_1630_static_volume:
   game_1630_media_volume:
+  game_1630_postgres_data:
