--- a/config/requirements/base.in
+++ b/config/requirements/base.in
@@ -17,3 +17,7 @@ django-filter==22.1
 django-celery-beat==2.2.1
 celery==5.2.2
 django-redis==5.2.0
+
+django-sendgrid-v5==1.2.1
+
+django-import-export==3.0.2
