--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,4 @@ ENABLE_DEBUG_TOOLS=1
 
 SENTRY_DSN=
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_STORAGE_BUCKET_NAME=
-AWS_S3_ENDPOINT_URL=
-AWS_QUERYSTRING_EXPIRE=
+SENDGRID_API_KEY=
