adds theme static and constance socials

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,9 @@ ENABLE_DEBUG_TOOLS=1
 SENTRY_DSN=
 
 SENDGRID_API_KEY=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
+AWS_S3_ENDPOINT_URL=
+AWS_QUERYSTRING_EXPIRE=
