--- a/config/nginx/stage/default.conf
+++ b/config/nginx/stage/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name stage.game_1630.co.uk;
+    server_name stage.hammad-sahab.com;
     client_max_body_size 20M;
 
     location /.well-known/acme-challenge/ {
@@ -14,7 +14,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name stage.game_1630.co.uk;
+    server_name stage.hammad-sahab.com;
     client_max_body_size 20M;
 
     location /app {
@@ -50,8 +50,8 @@ server {
         alias /code/media;
     }
 
-    ssl_certificate /etc/letsencrypt/live/stage.game_1630.co.uk/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/stage.game_1630.co.uk/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/stage.hammad-sahab.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/stage.hammad-sahab.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
