--- a/config/nginx/prod/default.conf
+++ b/config/nginx/prod/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name pro.hammad-sahab.com;
+    server_name hammad-sahab.com;
     client_max_body_size 20M;
 
     location /.well-known/acme-challenge/ {
@@ -14,7 +14,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name pro.hammad-sahab.com;
+    server_name hammad-sahab.com;
     client_max_body_size 20M;
 
     location /app {
@@ -24,12 +24,6 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /flower {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-        proxy_pass http://flower:5555;
-    }
 
     location / {
         try_files $uri @fallback;
@@ -50,8 +44,8 @@ server {
         alias /code/media;
     }
 
-    ssl_certificate /etc/letsencrypt/live/pro.hammad-sahab.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/pro.hammad-sahab.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/hammad-sahab.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/hammad-sahab.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
