configures 1630 domain and ssl

--- a/config/nginx/prod/default.conf
+++ b/config/nginx/prod/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name hammad-sahab.com;
+    server_name 1630game.com;
     client_max_body_size 20M;
 
     location /.well-known/acme-challenge/ {
@@ -14,7 +14,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name hammad-sahab.com;
+    server_name 1630game.com;
     client_max_body_size 20M;
 
     location /app {
@@ -44,8 +44,8 @@ server {
         alias /code/media;
     }
 
-    ssl_certificate /etc/letsencrypt/live/hammad-sahab.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/hammad-sahab.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/1630game.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/1630game.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
