temp remove ssl

--- a/config/nginx/prod/default.conf
+++ b/config/nginx/prod/default.conf
@@ -3,17 +3,17 @@ server {
     server_name 1630game.com;
     client_max_body_size 20M;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+#     location /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 http://$host$request_uri;
     }
 }
 
 server {
-    listen 443 ssl;
+#     listen 443 ssl;
     server_name 1630game.com;
     client_max_body_size 20M;
 
@@ -44,8 +44,8 @@ server {
         alias /code/media;
     }
 
-    ssl_certificate /etc/letsencrypt/live/1630game.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/1630game.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+#    ssl_certificate /etc/letsencrypt/live/1630game.com/fullchain.pem;
+#    ssl_certificate_key /etc/letsencrypt/live/1630game.com/privkey.pem;
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
